rework layout, change icons

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         to improve your experience.</p>
     <![endif]-->
 
-    <div ui-view></div>
+    <div ui-view layout="row" layout-fill></div>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
