--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" ng-app="angularMaterialAdmin">
   <head>
     <meta charset="utf-8">
-    <title>angularMaterialAdmin</title>
+    <title>Angular Material Admin</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
