--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html class="no-js" ng-app="angularMaterialAdmin">
   <head>
     <meta charset="utf-8">
-    <title>Angular Material Admin</title>
-    <meta name="description" content="">
+    <title>Angular Material Dashboard</title>
+    <meta name="description" content="Angular admin dashboard with material design">
+    <meta name="autoe" content="flatlogic.com">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
