Author meta typo fixed

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Angular Material Dashboard</title>
     <meta name="description" content="Angular admin dashboard with material design">
-    <meta name="autoe" content="flatlogic.com">
+    <meta name="author" content="flatlogic.com">
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
